# bm-darwin-setup

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: main.rs  shell.rs  ssh.rs
